<?xml version="1.0"?>
<package format="2">
  <name>lkh_tsp_solver</name>
  <version>0.0.0</version>
  <description>The lkh_tsp_solver package</description>
  <maintainer email="dringkn@gmail.com">Dr. -Ing. Ahmad Kamal Nasir</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
